--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="container"></div>
+		
 		<script type="text/javascript" src="./output/vendor/jquery-1.8.0.min.js"></script>
 		<script type="text/javascript" src="./output/vendor/underscore-1.8.3.js"></script>
 		<script type="text/javascript" src="./output/vendor/backbone-1.3.2.js"></script>
@@ -15,8 +16,9 @@
 		<script type="text/javascript" src="./output/vendor/dust-full.min.js"></script>
 		<script type="text/javascript" src="./output/vendor/backbone.marionette.dust.js"></script>
 		<script type="text/javascript" src="./output/vendor/backbone.layoutmanager.js"></script>
-		<script type="text/javascript" src="./output/js/common-complied-templates.js"></script>
 
-		<script type="text/javascript" src="./app/main.js"></script>
+		<script type="text/javascript" src="./output/js/common-complied-templates.js"></script>
+		
+		<script type="text/javascript" src="./app/login.js"></script>
 	</body>
 </html>
