--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 		<script type="text/javascript" src="./output/vendor/backbone.layoutmanager.js"></script>
 		<script type="text/javascript" src="./output/js/common-complied-templates.js"></script>
 
-		<script type="text/javascript" src="./app/main.js"></script>
+		<script type="text/javascript" src="./output/main.js"></script>
 	</body>
 </html>
